--- a/index.html
+++ b/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html lang="fa">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ارسال رزومه ساده</title>
-  <style>
-    body{font-family:tahoma,arial;background:#f5f5f5;padding:20px}
-    .card{max-width:640px;margin:20px auto;background:#fff;padding:18px;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,.06)}
-    label{display:block;margin-top:10px}
-    input,textarea{width:100%;padding:8px;margin-top:6px;border:1px solid #ccc;border-radius:4px}
-    button{margin-top:12px;padding:10px 16px;border:none;border-radius:6px;background:#2b6cb0;color:#fff;cursor:pointer}
-    small{color:#666}
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h3>فرم ارسال رزومه</h3>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>بازی آنلاین سنگ-کاغذ-قیچی</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="card">
+      <h1>بازی آنلاین سنگ ✊ — کاغذ ✋ — قیچی ✌️ (P2P)</h1>
 
-    <!-- اینجا ایمیل شخصی تو قرار داده شده -->
-    <form action="https://formsubmit.co/pedramhallaji8181@gmail.com" method="POST" enctype="multipart/form-data">
-      <label>نام و نام خانوادگی
-        <input type="text" name="name" required />
-      </label>
+      <div class="row" style="gap: 12px">
+        <div style="flex: 1; min-width: 300px">
+          <div class="small">مرحلهٔ ایجاد اتصال (طرف A)</div>
+          <div class="controls">
+            <button id="createOffer">ساختن Offer</button>
+            <button id="copyOffer" class="secondary">کپی Offer</button>
+            <button id="setRemoteAnswer" class="secondary">
+              قرار دادن Answer (Paste)
+            </button>
+          </div>
+          <textarea
+            id="offerArea"
+            placeholder="Offer / Answer اینجا نمایش داده میشه..."
+          ></textarea>
+        </div>
 
-      <label>ایمیل فرستنده (اختیاری)
-        <input type="email" name="email" />
-      </label>
+        <div style="flex: 1; min-width: 300px">
+          <div class="small">اگر طرف دوم هستید (طرف B)</div>
+          <div class="controls">
+            <button id="pasteOffer" class="secondary">
+              چسباندن Offer دریافتی
+            </button>
+            <button id="createAnswer">ساختن Answer</button>
+            <button id="copyAnswer" class="secondary">کپی Answer</button>
+          </div>
+          <textarea
+            id="answerArea"
+            placeholder="اینجا Offer یا Answer را بچسبانید یا پاسخ ساخته شود..."
+          ></textarea>
+        </div>
+      </div>
 
-      <label>متن رزومه
-        <textarea name="message" rows="6" required></textarea>
-      </label>
+      <div class="status" id="connStatus">وضعیت: قطع (not connected)</div>
 
-      <label>آپلود فایل (عکس یا PDF)
-        <input type="file" name="attachment" accept="image/*,application/pdf" />
-        
-      </label>
+      <div class="card" style="margin-top: 12px">
+        <div class="small">بخش بازی</div>
+        <div class="moves">
+          <button class="move-btn" data-move="rock">سنگ</button>
+          <button class="move-btn" data-move="paper">کاغذ</button>
+          <button class="move-btn" data-move="scissors">قیچی</button>
+        </div>
+        <div class="result" id="resultText">هنوز بازی نشده</div>
+        <div style="display: flex; justify-content: center; margin-top: 8px">
+          <button id="rematch" class="secondary">شروع دوباره</button>
+        </div>
+        <div class="log" id="logArea" style="margin-top: 10px"></div>
+      </div>
+    </div>
 
-      <!-- می‌تونی کاربر رو بعد از ارسال به صفحه تشکر ببری -->
-      <!-- <input type="hidden" name="_next" value="https://your-website.com/thanks.html"> -->
-
-      <button type="submit">ارسال به ایمیل من</button>
-    </form>
-
-  </div>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
