--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <body>
     <h1>Snake Game</h1>
     <canvas id="gameCanvas"></canvas>
+
+    <!-- دکمه‌های کنترل موبایل -->
     <div id="controls">
-      <button id="up">↑</button><br />
+      <button id="up">↑</button>
       <button id="left">←</button>
       <button id="down">↓</button>
       <button id="right">→</button>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
