--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>🐍 Snake Game – Nokia Edition</h1>
     <canvas id="gameCanvas"></canvas>
 
+    <!-- دکمه شروع -->
+    <button id="start-btn">شروع بازی ▶️</button>
+
     <!-- کنترل نوکیا -->
     <div id="nokia-controls">
       <div class="control-row">
