--- a/index.html
+++ b/index.html
@@ -3,41 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snake Game – Nokia Edition</title>
+    <title>بازی مار نوکیا</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>🐍 Snake Game – Nokia Edition</h1>
-    <canvas id="gameCanvas"></canvas>
+    <div class="game-container">
+      <!-- دکمه شروع بالای کانواس -->
+      <button id="startBtn">🐍 شروع</button>
 
-    <!-- کنترل و دکمه شروع در یک بخش فشرده -->
-    <div id="bottom-panel">
-      <div id="nokia-controls">
-        <div class="control-row">
-          <button id="up">▲</button>
+      <!-- کانواس بازی -->
+      <canvas id="gameCanvas"></canvas>
+
+      <!-- دکمه‌های حرکت نوکیا -->
+      <div id="controls">
+        <button id="up">⬆️</button>
+        <div class="middle-row">
+          <button id="left">⬅️</button>
+          <button id="ok">OK</button>
+          <button id="right">➡️</button>
         </div>
-        <div class="control-row">
-          <button id="left">◀</button>
-          <div class="center-circle"></div>
-          <button id="right">▶</button>
-        </div>
-        <div class="control-row">
-          <button id="down">▼</button>
-        </div>
+        <button id="down">⬇️</button>
       </div>
-
-      <button id="start-btn">▶️</button>
     </div>
 
-    <!-- صداها -->
-    <audio
-      id="eat-sound"
-      src="https://actions.google.com/sounds/v1/cartoon/pop.ogg"
-    ></audio>
-    <audio
-      id="gameover-sound"
-      src="https://actions.google.com/sounds/v1/cartoon/clang_and_wobble.ogg"
-    ></audio>
+    <!-- صداها و لرزش -->
+    <audio id="bgMusic" src="music.mp3" loop></audio>
+    <audio id="eatSound" src="eat.mp3"></audio>
+    <audio id="deadSound" src="dead.mp3"></audio>
 
     <script src="script.js"></script>
   </body>
