--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="up">⬆️</button>
         <div class="middle-row">
           <button id="left">⬅️</button>
-          <button id="ok">OK</button>
+          <button id="ok">STOP</button>
           <button id="right">➡️</button>
         </div>
         <button id="down">⬇️</button>
